# indicator-location

./: .bzrignore  CMakeLists.txt  ChangeLog  INSTALL  MERGE-REVIEW  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
cmake/: GCov.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  com.canonical.indicator.location  indicator-location.conf.in  indicator-location.desktop  indicator-location.desktop.in  indicator-location.service.in  indicator-location.upstart.desktop.in
debian/: changelog  control  copyright  rules
po/: POTFILES.in  af.po  am.po  ar.po  ast.po  az.po  be.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  es.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hu.po  hy.po  id.po  indicator-location.pot  is.po  it.po  ja.po  km.po  ko.po  lt.po  lv.po  mk.po  (+26 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  accounts-service-license-controller.cc  accounts-service-license-controller.h  app.cc  app.h  controller-mock.h  controller-ualc.cc  controller-ualc.h  controller.cc  controller.h  dbus-shared.h  indicator-location.c  license-controller.cc  license-controller.h  location-service-controller.cc  location-service-controller.h  main.c  main.cc  mock-license-controller.h  phone.cc  phone.h  service.cc  service.h  utils.h
tests/: CMakeLists.txt  controller-mock.h  gtest-dbus-fixture.h  gtest-dbus-indicator-fixture.h  hello-world.cc  manual  phone-test.cc  ualc-mock.c  ualc-test.cc
tools/: CMakeLists.txt  format-files.sh  format-test.sh
