
iconsdir = $(pkgdatadir)/icons/
icons_DATA = \
	indicator-location-neighborhood.svg \
	indicator-location-region.svg \
	indicator-location-specific.svg \
	indicator-location-unknown.svg

autostartdir = $(sysconfdir)/xdg/autostart
autostart_DATA = indicator-location.desktop

EXTRA_DIST = \
	$(autostart_DATA) \
	$(icons_DATA)
